--- a/ui/lib/l10n/app_vi.arb
+++ b/ui/lib/l10n/app_vi.arb
@@ -232,10 +232,11 @@
   "tryAdjustingFilters": "Try adjusting your filters to find more results",
   "eventListTitle": "Danh sách sự kiện",
   "eventListSubtitle": "Xem, quản lý và sắp xếp các sự kiện sắp diễn ra của bạn.",
-  "eventListTitle": "Danh sách sự kiện",
-  "eventListSubtitle": "Xem, quản lý và sắp xếp các sự kiện sắp diễn ra của bạn.",
+  "eventListOfflineSubtitle": "Bạn đang ngoại tuyến. Danh sách sự kiện chỉ hiển thị dữ liệu đã lưu.",
+  "guestListOfflineSubtitle": "Bạn đang ngoại tuyến. Danh sách khách chỉ hiển thị dữ liệu đã lưu.",
   "createEvent": "Thêm sự kiện",
   "reportOverviewSubtitle": "Xem và phân tích hiệu suất sự kiện của bạn",
+  "offlineBanner": "Bạn đang ngoại tuyến. Đang hiển thị dữ liệu đã lưu, các thao tác chỉnh sửa bị vô hiệu hóa.",
   "refresh": "Làm mới",
   "guestListTitle": "Danh sách khách mời",
   "performanceTrendSubtitle": "Xem và phân tích sự thay đổi trong hiệu suất sự kiện",
